dataset1235/2025-2/1955397009/users/209087680/executions/1107611404_48684178.log
== RUN (2025-08-19 13:09:43)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=float(input("insirano total de vendas"))
y= x*(30/100)
print(y)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
insirano total de vendas435.86400000000003
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
insirano total de vendas210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
insirano total de vendas60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
insirano total de vendas135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
insirano total de vendas165.30599999999998
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
insirano total de vendas568.197
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:10:06)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=float(input("insirano total de vendas"))
y= x*(30/100)
print(round(y,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
insirano total de vendas435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
insirano total de vendas210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
insirano total de vendas60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
insirano total de vendas135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
insirano total de vendas165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
insirano total de vendas568.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:10:14)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=float(input("insirano total de vendas:  "))
y= x*(30/100)
print(round(y,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
insirano total de vendas:  435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
insirano total de vendas:  210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
insirano total de vendas:  60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
insirano total de vendas:  135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
insirano total de vendas:  165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
insirano total de vendas:  568.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 13:10:32)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=float(input("insirano total de vendas:  "))
y= x*(30/100)
print(round(y,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
insirano total de vendas:  435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
insirano total de vendas:  210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
insirano total de vendas:  60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
insirano total de vendas:  135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
insirano total de vendas:  165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
insirano total de vendas:  568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:10:00)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=float(input("insirano total de vendas"))
y= x*(30/100)
print(round(y,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 6
    print(round(y,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 6
    print(round(y,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 6
    print(round(y,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 6
    print(round(y,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 6
    print(round(y,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 6
    print(round(y,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
